<resources>
    <string name="app_name">TravelMate</string>
    <string name="home">home</string>
    <string name="fav">fav</string>
    <string name="map">map</string>
    <string name="user">user</string>
    <string name="search">search</string>
    <string name="Configuración">Configuración</string>
    <string name="route">route</string>
    <string name="iniciar">Iniciar</string>
    <string name="m_s_detalles">Más detalles…</string>
    <string name="route_search">Route search</string>
    <string name="categor_as">Categorías</string>
    <string name="music_category">Music category</string>
    <string name="m_sica">Música</string>
    <string name="history_category">History category</string>
    <string name="historia">Historia</string>
    <string name="art_category">Art category</string>
    <string name="arte">Arte</string>
    <string name="nature_section">Nature section</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="leisure_category">Leisure category</string>
    <string name="ocio">Ocio</string>
    <string name="rutas_recomendadas">Rutas recomendadas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Map">Map</string>
    <string name="title_auth">Login</string>

    <string name="login_welcome">Welcome to TravelMate</string>
    <string name="login_button">LOG IN</string>
    <string name="logout_button">LOG OUT</string>¡

    <string name="login_success_message">Successfully logged in! %1$s</string>
    <string name="logout_failure_message">Something went wrong! %1$s</string>
    <string name="logout_success_message">Logged out.---</string>
    <string name="Ajustes">Ajustes</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="rutas_guardadas">Rutas Guardadas</string>
    <string name="museums">Museos</string>
    <string name="churchs">Iglesias</string>
    <string name="eat_drink">Comer y beber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ruta_recomendada">Ruta recomendada</string>
    <string name="ruta">Ruta</string>
    <string name="min">- min</string>
    <string name="km">- km</string>

    <string name="spotifyClientId">bb7d13226325409c831789a26a63d79b</string>
    <string name="spotifyClientSecret">78b2055442e441a09d80042918d541a3</string>
</resources>