<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.muei.travelmate.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.muei.travelmate.ui.home.FavFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.muei.travelmate.ui.home.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.muei.travelmate.ui.home.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.muei.travelmate.ui.home.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>