<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="150dp"
            android:src="@drawable/person"/>

        <TextView
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:inputType="text"
            android:text="@string/rutas_guardadas"/>

        <TextView
            android:id="@+id/editTextText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:inputType="text"
            android:text="@string/edit_profile"/>

        <TextView
            android:id="@+id/editTextText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:inputType="text"
            android:text="@string/Ajustes"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>