<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="70dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_travelmate"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/loginview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textAlignment="center"
            android:textSize="25dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/logout_button"/>

    </LinearLayout>
</FrameLayout>

