<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- MapView para mostrar el mapa -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"
        android:layout_alignTop="@id/map">

        <!-- Emoticono de la flecha -->
        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="arrow_icon" />

        <!-- Título -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/route_search"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Emoticono de la lupa -->
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_add" />

    </RelativeLayout>

    <!-- Layout para la información (tiempo, distancia, etc.) -->
    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_background"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/recommended_route_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruta_recomendada"
            android:textColor="@color/design_default_color_primary"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/time_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            android:layout_below="@id/recommended_route_text"
            >

            <!-- Texto para el tiempo -->

            <!-- Texto para la distancia -->
            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:text="@string/km"
                android:textColor="#808080"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruta"
            android:textSize="14sp"
            android:padding="4dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp" />

        <!-- Emoticono de altavoz -->
        <ImageView
            android:id="@+id/speaker_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/start_button"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_audio"
            android:layout_marginEnd="8dp" />

        <!-- Texto "Más detalles..." -->
        <TextView
            android:id="@+id/more_details_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_distance"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/m_s_detalles"
            android:textColor="#bf1d65"
            android:textSize="12sp" />



    </RelativeLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/button_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>