<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:drawablePadding="8dp"
                android:hint="Buscar ruta o destino..."
                android:textColorHint="@color/white"
                android:background="@drawable/search_bar_background"
                android:drawableEnd="@drawable/ic_search"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical|start"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/section1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="Destinos destacados"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/image1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.221"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="116dp"
                android:src="@drawable/image1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Segunda imagen -->
            <ImageView
                android:id="@+id/image2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/image2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/destination1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="24dp"
                android:text="Roma"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/image1"
                app:layout_constraintStart_toStartOf="@id/image1" />

            <TextView
                android:id="@+id/country1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Italia"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/destination1"
                app:layout_constraintStart_toStartOf="@id/destination1" />

            <TextView
                android:id="@+id/destination2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="24dp"
                android:text="Paris"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/image2"
                app:layout_constraintStart_toStartOf="@id/image2" />

            <TextView
                android:id="@+id/country2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Francia"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/destination2"
                app:layout_constraintStart_toStartOf="@id/destination2" />


            <!-- Categorías -->
            <TextView
                android:id="@+id/section2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categor_as"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/category_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image1" />

            <LinearLayout
                android:id="@+id/category_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section2">

                <!-- Chip 1 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/music_chip"
                        android:contentDescription="@string/music_category"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:background="@drawable/chip_background"
                        android:padding="10dp"
                        android:src="@drawable/ic_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m_sica"
                        android:textSize="10sp" />
                </LinearLayout>

                <!-- Chip 2 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/history_chip"
                        android:contentDescription="@string/history_category"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:background="@drawable/chip_background"
                        android:padding="10dp"
                        android:src="@drawable/ic_history" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historia"
                        android:textSize="10sp" />
                </LinearLayout>

                <!-- Chip 3 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/art_chip"
                        android:contentDescription="@string/art_category"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:background="@drawable/chip_background"
                        android:padding="10dp"
                        android:src="@drawable/ic_book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arte"
                        android:textSize="10sp" />
                </LinearLayout>

                <!-- Chip 4 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/nature_chip"
                        android:contentDescription="@string/nature_section"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:background="@drawable/chip_background"
                        android:padding="10dp"
                        android:src="@drawable/ic_cloud" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/naturaleza"
                        android:textSize="10sp" />
                </LinearLayout>

                <!-- Chip 5 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/leisure_chip"
                        android:contentDescription="@string/leisure_category"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:background="@drawable/chip_background"
                        android:padding="10dp"
                        android:src="@drawable/ic_party" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ocio"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/section3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rutas_recomendadas"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/gridLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_layout" />

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">


                <!-- Elemento 1 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/route1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/image3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/route_name1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="Senderismo"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/route1"
                        app:layout_constraintStart_toStartOf="@id/route1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Elemento 2 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/route2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/image1" />

                    <TextView
                        android:id="@+id/route_name2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="Monumentos"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/route2"
                        app:layout_constraintStart_toStartOf="@id/route2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Elemento 3 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/route3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/image4" />

                    <TextView
                        android:id="@+id/route_name3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="Paris"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/route3"
                        app:layout_constraintStart_toStartOf="@id/route3" />
                </LinearLayout>

                <!-- Elemento 4 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/route4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/image1" />

                    <TextView
                        android:id="@+id/route_name4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="Madrid"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/route4"
                        app:layout_constraintStart_toStartOf="@id/route4" />
                </LinearLayout>

            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
